# DeepLearning-RedisCaching

./: README.md  pyproject.toml
L2/: L2-ran.ipynb  Redis-cache-RAG-L2.ipynb
L2/cache/: L2-ran.ipynb  L3-ran.ipynb  L3.ipynb
L3/: L3-ran.ipynb
L4/: L4-ran.ipynb
L5/: L5-ran.ipynb
