[project]
name = "semantic-caching-course"
version = "0.1.0"
description = "A course on semantic caching with Redis and vector embeddings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "langchain>=0.3.26",
    "python-dotenv>=1.1.1",
    "langchain-google-genai>=2.1.8",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "jaro-winkler>=2.0.3",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "panel>=1.4.5",
    "bokeh>=3.4.3",
    "umap>=0.1.1",
    "watchfiles>=1.1.0",
    "jupyter-bokeh>=4.0.5",
    "redisvl==0.8.2",
    "tiktoken>=0.5.0",
    "gradio>=4.44.1",
    "requests>=2.32.4",
    "tavily-python>=0.7.12",
    "langchain-core>=0.3.72",
    "beautifulsoup4>=4.13.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
